# stringcase

./: .gitignore  README.md  pyproject.toml
src/stringcase/: __init__.py  _convert.py  _tokenize.py  api.py  errors.py
tests/: test_camel_pascal.py  test_convert.py  test_kebab_constant_dot.py  test_snake.py  test_title_path.py  test_tokenize.py
